--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "devDependencies": {
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "nodemailer": "^7.0.5"
   }
 }
